Fixed layout bug on onboarding page in IE10

--- a/src/sass/myservice-utilities.scss
+++ b/src/sass/myservice-utilities.scss
@@ -172,30 +172,6 @@
     margin: .5em;
   }
 
-  .flex-item--equal-heights {
-    display: flex;
-    flex: 1;
-    flex-flow: column wrap;
-    margin: 0;
-    margin-right: 1em;
-
-    p {
-      flex: 1;
-      padding: 1.5em 1.7em;
-    }
-
-    a {
-      align-items: center;
-      display: flex;
-      flex: 1;
-      flex-flow: column;
-    }
-
-    &:last-of-type {
-      margin-right: 0;
-    }
-  }
-
   .grids {
     &.side-pannel {
       border-left: 1px solid $gray-light;
@@ -208,8 +184,6 @@
   .row-eq-height {
     display: flex;
   }
-
-  // .equal-heights__cel {}
 }
 
 
